--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.5",
         "laravel/framework": "^7.24",
         "laravel/telescope": "3.5.1",
         "laravel/tinker": "^2.0",
