--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "masterminds/html5": "^2.7",
         "yajra/laravel-datatables": "1.5"
     },
     "require-dev": {
